--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
     </script>
   </head>
-  <body class="">
+  <body class="dark selection:bg-green-600 selection:text-white">
     <div id="app" class=""></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
