--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/svg+xml" href="/me.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://inkomomutane.github.io/me.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nelson Alexandre Mutane - Software Developer</title>
-  <meta type="description"
-    content="I'm a Software Developer specializing in web development and passionate about creating efficient and user-friendly applications. Check out my portfolio to see some of my projects." />
-
-  <!-- OpenGraph Tags -->
-  <meta property="og:title" content="Nelson Alexandre Mutane - Software Developer">
-  <meta property="og:description"
-    content="I'm a Software Developer specializing in web development and passionate about creating efficient and user-friendly applications. Check out my portfolio to see some of my projects.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://example.com/nelson-mutane">
-  <meta property="og:image" content="https://example.com/nelson-mutane.jpg">
-
+  <meta name="robots" content="max-snippet:-1,max-image-preview:large,max-video-preview:-1">
+  <link rel="canonical" href="https://inkomomutane.github.io">
   <!-- Microdata -->
   <script type="application/ld+json">
     {
@@ -23,16 +13,15 @@
       "@type": "Person",
       "name": "Nelson Alexandre Mutane",
       "jobTitle": "Software Developer",
-      "description": "I'm a Software Developer specializing in web development and passionate about creating efficient and user-friendly applications. Check out my portfolio to see some of my projects.",
-      "url": "https://example.com/nelson-mutane",
+      "description": "Hi there! I'm Nelson Alexandre Mutane, a passionate full-stack developer with over 4 years of experience. I specialize in web development using stacks like Laravel, Vue, Statamic and more..., crafting powerful web applications. Let's work together to turn your ideas into reality and create unforgettable digital experiences!",
+      "url": "https://inkomomutane.github.io",
       "image": {
         "@type": "ImageObject",
-        "url": "https://example.com/nelson-mutane.jpg"
+        "url": "https://inkomomutane.github.io/me.webp"
       },
       "sameAs": [
-        "https://github.com/nelsonmutane",
+        "https://github.com/inkomomutane",
         "https://linkedin.com/in/nelsonmutane",
-        "https://twitter.com/nelsonmutane"
       ]
     }
   </script>
