--- a/index.html
+++ b/index.html
@@ -165,5 +165,5 @@
   <script type="module" src="/src/main.ts"></script>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </html>
